--- a/_config.yml
+++ b/_config.yml
@@ -175,7 +175,7 @@ defaults:
       type: posts
     values:
       layout: article
-      license: true
+      license: false
       aside:
         toc: true
       show_edit_on_github: true
